# engram

./: .gitignore  LICENSE  README.md  SPEC.md  auto_capture.py  batch_capture.py  check_llm.py  consolidate_all.py  dedup.py  do_export.py  do_import.py  engram.yaml  engram.yaml.example  engram_aip_wrapper.py  engram_backup.py  engram_capture.py  engram_dvm.py  engram_heartbeat.py  engram_hot_cache.py  engram_query.py  engram_startup.py  install.ps1  migrate.py  migrate_to_lance.py  nostr-spec-event.json  pyproject.toml  reembed_all.py  run_batch.py  run_dream.py  run_dream_debug.py  test_consolidate.py  test_engram.py  test_init.py  test_llm.py  test_quick_llm.py  test_real.py  transplant_demo.py
engram/: __init__.py  anchoring.py  config.py  consolidator.py  core.py  dreamer.py  embedder.py  hot_cache.py  identity.py  llm.py  metabolism.py  narrative.py  prospective.py  retriever.py  safe_write.py  store.py  transplant.py  types.py
engram_core/: __init__.py  anchoring.py  attestation.py  consolidator.py  crdt_merger.py  dreamer.py  embedder.py  engram.py  identity.py  lance_store.py  llm.py  metabolism.py  narrative.py  prospective.py  retriever.py  safe_write.py  schema.py  self_evolve.py  store.py  transplant.py
examples/: basic_usage.py  with_ollama.py  with_openai.py
tests/: conftest.py  test_core.py  test_crdt.py
